== 2.9.0 ==
Release date: 
* New: Charts widget

== 2.8.4 ==
Release date: February 28, 2025
* Enhancement: Price Menu - Added 1 new style
* Enhancement: Image Accordion - Added option to apply link on button or item container
* Enhancement: Info Grid & Carousel - Added Icon Position option
* Enhancement: Info Table - Added Icon Position option
* Fixed: Logo Grid - Minor CSS glitch when link is added to logo
* Fixed: Display Conditions - Deprecated code in Request Parameter condition

== 2.8.3 ==
Release date: December 24, 2024
* Enhancement: Added has_widget_inner_wrapper to support “Optimized Markup” experiment
* Enhancement: Advanced Posts - Added conditional check to scripts and styles
* Enhancement: Instagram Feed - Updated Choose Arrow option
* Fixed: Pricing Table - Default background color
* Fixed: Issue with carousel widgets
* Fixed: Animation Gradient Background

== 2.8.2 ==
Release date: December 5, 2024
* Enhancement: Advanced Accordion - Added Vertical Alignment option for Toggle Icon
* Enhancement: Removed .elementor-widget-container class as part of the “Optimized Markup” experiment
* Enhancement: Enhanced security of widgets with saved templates feature
* Fixed: Image Comparison - jQuery Event Move lib was missing
* Fixed: PHP errors when Optimized Markup experiment is activated

== 2.8.1 ==
Release date: November 27, 2024
* Enhancement: Dual Heading - Moved Spacing option to content tab and reorganised the style options
* Enhancement: Pricing Table - Added responsive support for Tooltip position option
* Fixed: Image Comparison - Handle was not working
* Fixed: WP Forms - Confirmation text color option was not working
* Fixed: Unnecessary call to frontend.min.css file
* Fixed: Security issue

== 2.8.0 ==
Release date: October 30, 2024
* New: Interactive Circle widget
* New: Progress Bar widget
* Enhancement: Display Conditions - Added new Device Type display condition