@@ -1,6 +1,7 @@
 == 2.9.0 ==
 Release date: 
 * New: Charts widget
+* Fixed: Instagram Feed - Lightbox arrows were not showing
 
 == 2.8.4 ==
 Release date: February 28, 2025
